--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,13 +12,20 @@
     <header>
         <nav>
             <ul>
+                <% if (!locals.userId) { %>
                 <li><a href="/login">Вход</a></li>
                 <li><a href="/register">Регистрация</a></li>
+                <% } else { %>
+                <li><a href="/logout">Выйти</a></li>
+                <% } %>
             </ul>
         </nav>
     </header>
     <main>
         <h1>Login</h1>
+        <% if (locals.error_msg) { %>
+            <div class="alert alert-danger"><%= error_msg %></div>
+        <% } %>
         <form action="/login" method="POST">
             <div>
                 <label for="username">Username</label>
