add cart basic function and start of order

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Корзина</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <h1>Содержимое корзины</h1>
     <ul>
-        <% cartItems.forEach(item => { %>
-            <li><%= item.name %> - <%= item.price %> тг.</li>
-        <% }); %>
+        <% cartItems.forEach(item=> { %>
+            <li>
+                <%= item.productName %> - <%= item.price %> тг.
+                        <button class="remove-from-cart-btn" data-userid="<%= user.id %>"
+                            data-productid="<%= item._id %>">
+                            Удалить из корзины
+                        </button>
+            </li>
+            <% }); %>
     </ul>
     <p>Итого: <%= cartTotal %> тг.</p>
+    <button id="checkout-btn">Оформить заказ</button>
+    <script src="/js/script.js"></script>
 </body>
+
 </html>
