--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                         <li class="nav-item"><a class="nav-link" href="/login">Вход</a></li>
                         <li class="nav-item"><a class="nav-link" href="/register">Регистрация</a></li>
                         <% } else { %>
-                            <li class="nav-item"><a class="nav-link" href="#">Привет, <%= user.username %>!</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/profile">Привет, <%= user.username %>!</a></li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Выйти</a></li>
                             <% } %>
                 </ul>
