--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -19,35 +19,40 @@
                         <li class="nav-item"><a class="nav-link" href="/login">Вход</a></li>
                         <li class="nav-item"><a class="nav-link" href="/register">Регистрация</a></li>
                         <% } else { %>
-                            <li class="nav-item"><a class="nav-link" href="#">Привет, <%= user.username %>!</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/profile">Привет, <%= user.username %>!</a>
+                            </li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Выйти</a></li>
                             <% } %>
                 </ul>
             </div>
         </nav>
     </header>
-    <main class="container mt-5">
-        <form id="order-form" action="/create-order" method="POST">
-            <label for="phone">Номер телефона:</label>
-            <input type="text" id="phone" name="phone" required>
-            <label for="address">Адрес доставки:</label>
-            <input type="text" id="address" name="address" required>
-            <label for="paymentMethod">Способ оплаты:</label>
-            <select id="paymentMethod" name="paymentMethod">
-                <option value="card">Картой онлайн</option>
-                <option value="cash">Наличными при получении</option>
-            </select>
-            <button type="submit">Подтвердить заказ</button>
-        </form>
-
+    <main class="container">
+        <h1>Логин</h1>
+        <% if (locals.error_msg) { %>
+            <div class="alert alert-danger">
+                <%= error_msg %>
+            </div>
+            <% } %>
+                <form action="/login" method="POST">
+                    <div class="form-group">
+                        <label for="username">Логин</label>
+                        <input type="text" class="form-control" id="username" name="username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Пароль</label>
+                        <input type="password" class="form-control" id="password" name="password" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Логин</button>
+                </form>
     </main>
     <footer class="text-center mt-4">
         <p>&copy; Dias Salakhutdinov SE-2203 </p>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/js/script.js"></script>
 </body>
 
 </html>
