--- a/views/cart/order.ejs
+++ b/views/cart/order.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
+    <title>Информация о заказе</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -13,13 +13,17 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">RakhimFood</a>
-            <div class="collapse navbar-collapse">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <% if (!user) { %>
                         <li class="nav-item"><a class="nav-link" href="/login">Вход</a></li>
                         <li class="nav-item"><a class="nav-link" href="/register">Регистрация</a></li>
                         <% } else { %>
-                            <li class="nav-item"><a class="nav-link" href="#">Привет, <%= user.username %>!</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/profile">Привет, <%= user.username %>!</a></li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Выйти</a></li>
                             <% } %>
                 </ul>
@@ -36,7 +40,8 @@
             <ul>
                 <% order.items.forEach(item=> { %>
                     <li>
-                        <%= item._id %> - <%= item.productName %> <br> Количество: <%= item.quantity %>, Цена: <%= item.price %> тг.
+                        <%= item._id %> - <%= item.productName %> <br> Количество: <%= item.quantity %>, Цена: <%=
+                                        item.price %> тг.
                     </li>
                     <% }); %>
             </ul>
@@ -53,7 +58,7 @@
                 <%= order.status %>
             </p>
         </div>
-        <% if (order.status !=='Отменен' && order.status !=='Завершен') { %>
+        <% if (order.status !=='Отменен' && order.status !=='Завершен' ) { %>
             <form action="/cancel-order" method="POST">
                 <input type="hidden" name="orderId" value="<%= order._id %>">
                 <button type="submit" class="btn btn-danger">Отменить заказ</button>
